kubernetes/apps/observability/gatus/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: gatus-egress-external
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: gatus
  egress:
    - toCIDRSet:
        - cidr: 1.1.1.1/32
      toPorts:
        - ports:
            - port: "53"
    - toCIDRSet:
        - cidr: "${VPS_IP}/32"
      toPorts:
        - ports:
            - port: "443"
    - toFQDNs:
        - matchPattern: "*.${ROOT_DOMAIN}"
        - matchPattern: "*.${EXTERNAL_ROOT_DOMAIN}"
      toPorts:
        - ports:
            - port: "443"
    - toCIDRSet:
        - cidr: 1.1.1.1/32
        - cidr: 8.8.8.8/32
        - cidr: 9.9.9.9/32
      icmps:
        - fields:
            - family: IPv4
              type: 8
            - family: IPv4
              type: 0
